<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/string"
        android:textColor="#fff"
        android:textSize="22sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:scrollbars="vertical">


            <ImageView
                android:id="@+id/ivNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/none"
                android:src="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/string"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvReadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/click_to_read_more"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>


